[gd_scene load_steps=2 format=3 uid="uid://es0kxxw0ecbx"]

[ext_resource type="Script" path="res://scenes/gameplay/start_dialog_area.gd" id="1_ae56s"]

[node name="StartDialogArea" type="Area2D"]
script = ExtResource("1_ae56s")
cursor_shape = 6

[connection signal="input_event" from="." to="." method="_on_click"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
